# datafusion-sprox

./: .gitignore  Cargo.toml  README.md  justfile
.github/: README.md  pull_request_template.md
.github/actions/: TODO.md
crates/sprox/: Cargo.toml  README.md
crates/sprox/data/sprox/: sample.parquet
crates/sprox/src/: fs.rs  lib.rs  main.rs  s3.rs
crates/sprox/tests/: it_aws.rs
dev/: DREAMS.md
src/: checksum.rs  config.rs  error.rs  lib.rs  main.rs  provider.rs  s3.rs  utils.rs
src/models/: response.rs
src/routes/: mod.rs  status.rs
