[package]
name = "datafusion-sprox"
version = "0.1.0-dev"
edition = "2021"
description = "An experimental S3 proxy"
license = "Apache-2.0"
keywords = ["s3", "gcs", "proxy", "cache"]


[dependencies]
aws-sdk-s3 = "1.17.0"
datafusion = "36.0.0"
dotenv = "0.15.0"
moka = { version = "0.12.5", features = ["future"] }
okapi = "0.7.0"
rocket = { version = "0.5.0", features = ["json"] }
s3s = "0.8.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["fs", "rt-multi-thread"] }
uuid = { version = "1.7.0", features = ["v4"] }
