[package]
name = "datafusion-sprox"
version = "0.1.0"
edition = "2021"


[dependencies]
async-trait = "0.1.73"
aws-sdk-s3 = "1.17.0"
base64-simd = "0.8.0"
bytes = "1.4.0"
crc32c = "0.6.4"
crc32fast = "1.3.2"
digest = "0.10.7"
datafusion = "36.0.0"
futures = "0.3.28"
hex-simd = "0.8.0"
hyper = { version = "0.14.27", features = ["full"] }
md-5 = "0.10.5"
mime = "0.3.17"
numeric_cast = "0.2.1"
nugine-rust-utils = "0.3.1"
path-absolutize = "3.1.0"
serde_json = "1.0.104"
s3s = "0.8.1"
sha1 = "0.10.5"
sha2 = "0.10.7"
transform-stream = "0.3.0"
tokio = { version = "1.31.0", features = [
    "fs",
    "io-util",
    "rt-multi-thread",
    "signal",
] }
tokio-util = { version = "0.7.8", features = ["io"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time"] }
uuid = { version = "1.7.0", features = ["v4"] }
